# Atlas

./: .clang-format  .gitignore  Atlas.slnx  CMakeLists.txt  CMakePresets.json  DOCS.md  README.md
.github/: FUNDING.yml
Atlas/: Atlas.vcxproj  Atlas.vcxproj.filters  CMakeLists.txt
Atlas/Source/Core/: Geometry.h
Atlas/Source/Core/Arena/: Arena.cpp
Atlas/Source/Core/Context/: Context.cpp  Context.h
Atlas/Source/Core/Input/: Input.cpp  Input.h
Atlas/Source/Interface/Desktop/Docking/: Docking.cpp  Docking.h
Atlas/Source/Interface/Desktop/Frames/: Frames.cpp  Frames.h
Atlas/Source/Interface/Layout/: Layout.cpp
Atlas/Source/Interface/Style/: Style.cpp
Atlas/Source/Interface/Widgets/: Widgets.cpp  Widgets.h
Atlas/Source/Ports/Canvas/: Canvas.cpp  Canvas.h
Atlas/Source/Ports/Graphics/DirectX11/: DirectX11.cpp
Atlas/Source/Ports/Graphics/DirectX12/: DirectX12.cpp  DirectX12.h
Atlas/Source/Ports/Graphics/Metal/: Metal.h  Metal.mm
Atlas/Source/Ports/Graphics/OpenGL/: OpenGL.cpp
Atlas/Source/Ports/Graphics/Vulkan/: Vulkan.cpp  Vulkan.h
Atlas/Source/Ports/Platform/Native/: Native.cpp
Atlas/Source/Ports/Platform/Pictures/: Pictures.cpp
Atlas/Source/Ports/Shaders/: Shaders.cpp
Atlas/Source/Text/Font/: Font.cpp
Atlas/Source/Text/Format/: Format.cpp
Atlas/Source/Text/Sheet/: Sheet.cpp  Sheet.h
Package/Include/: Atlas.h
Package/Include/Core/Arena/: Arena.h
Package/Include/Interface/Layout/: Layout.h
Package/Include/Interface/Style/: Style.h
Package/Include/Ports/Graphics/DirectX11/: DirectX11.h
Package/Include/Ports/Graphics/Metal/: Metal.h
Package/Include/Ports/Graphics/OpenGL/: OpenGL.h
Package/Include/Ports/Platform/Native/: Native.h
Package/Include/Ports/Platform/Pictures/: Pictures.h
Package/Include/Ports/Shaders/: Shaders.h
Package/Include/Text/Font/: Font.h
Package/Include/Text/Format/: Format.h
Sample/: CMakeLists.txt  Sample.vcxproj  Sample.vcxproj.filters
Sample/Source/: EntryPoint.cpp
Sample/Source/Hosts/: Hosts.h
Sample/Source/Hosts/DirectX11/: ElevenHost.cpp  ElevenHost.h
Sample/Source/Hosts/DirectX12/: TwelveHost.cpp  TwelveHost.h
Sample/Source/Hosts/OpenGL/: OpenGLHost.cpp  OpenGLHost.h
Sample/Source/Hosts/Vulkan/: VulkanHost.cpp  VulkanHost.h
